<resources>
    <string name="app_name">Smart_Door _App</string>
    <string name="action_settings">Settings</string>
    <string name="username_text">UserName</string>
    <string name="password_text">Password</string>
    <string name="attempts_text">Attempts:</string>
    <string name="smart_door_text">SMART DOOR LOCK</string>
    <string name="button_login">Login</string>
    <string name="title_activity_user">user</string>
    <string name="hello_text">Hello</string>
    <string name="currentpas_text">Current Password</string>
    <string name="newpassword_text">New Password</string>
    <string name="confirmpas_text">Confirm Password</string>
    <string name="Confirmpas_text">Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="create_account_text">Create Account</string>
    <string name="signup_text">Sign Up</string>
    <string name="title_activity_side_panel">sidePanel</string>
    <string name="title_activity_account_settings">Account Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="activity">I am in the activity page!</string>
    <string name="action">I am in the action page!</string>
    <string name="settings">I am in the door settings page!</string>
</resources>
