<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_accountsettings"
        android:text="Account Settings"
        android:layout_weight="0.30" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/currentpas_text"
        android:id="@+id/textView_currentpass"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/editText_accountsettings"
        android:layout_alignLeft="@+id/textView_confirmpas"
        android:layout_alignStart="@+id/textView_confirmpas" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/newpassword_text"
        android:id="@+id/textView_npass"
        android:layout_above="@+id/editText_passreg"
        android:layout_alignRight="@+id/textView_currentpass"
        android:layout_alignEnd="@+id/textView_currentpass" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_usereg"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/textView_currentpass"
        android:layout_alignLeft="@+id/editText_passreg"
        android:layout_alignStart="@+id/editText_passreg" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_passreg"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_save"
        android:text="Save Changes"
        android:layout_marginBottom="43dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Confirmpas_text"
        android:id="@+id/textView_confirmpas"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/editText_passreg"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_confirmpas"
        android:layout_alignRight="@+id/editText_passreg"
        android:layout_alignEnd="@+id/editText_passreg"
        android:layout_below="@+id/textView_confirmpas" />

</RelativeLayout>